<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>rbvogui_common</name>
  <version>0.9.0</version>
  <description>Metapackage for RBVogui common packages between simulation and real robot.</description>
  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>
  
  <license>BSD-2-Clause</license>

  <url type="website">https://robotnik.eu/products/mobile-robots/rb-vogui-en</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbvogui_common/issues</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbvogui_common</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rbvogui_description</exec_depend>
  <exec_depend>rbvogui_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
